main.blade.php - viste - scss

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,13 @@
 //
+
+@import 'partials/vars';
+@import 'partials/mixins';
+@import 'partials/global';
+@import 'partials/utils';
+@import 'partials/header';
+@import 'partials/main';
+@import 'partials/footer';
+
+
+
+
