--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,7 @@
 @import 'partials/utils';
 @import 'partials/header';
 @import 'partials/main';
+@import 'partials/icon';
 @import 'partials/footer';
 
 
