--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -3,7 +3,7 @@ main{
     text-align: center;
     .jumbotron{
     height: 400px;
-    background-image: url(../../../public/img/jumbotron.jpg);
+    background-image: url("../../../public/img/jumbotron.jpg");
     background-position:initial;
     background-size: cover;
     }
